Stop the ProcessCanceledException when debugging. To comment out after finishing